--- a/index.html
+++ b/index.html
@@ -67,42 +67,69 @@
 
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-									<li><a target="_self" href="http://fossasia.org/about">About</a></li>
-									<li class="has-dropdown"><a href="http://labs.fossasia.org" target="_self">Labs</a>
-										<ul class="nav-dropdown">
+										<li class="has-dropdown"><a href="./about">About</a>
+										<ul class="nav-dropdown" style="min-height: 100px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
+											<li><a target="_self" href="https://fossasia.org/about#background">Background & Mission</a></li>
+											<li><a target="_self" href="https://fossasia.org/licenses">Licenses</a></li>
+											<li><a target="_self" href="https://fossasia.org/team">Team</a></li>
+										</ul>
+									<li class="has-dropdown"><a href="https://fossasia.org/apply/index.html">Apply</a>
+										<ul class="nav-dropdown" style="min-height: 255px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
+											<li><a target="_self" href="https://fossasia.org/apply.html">Programs and Guidelines</a></li>
+											<li><a target="_self" href="https://fossasia.org/internship">Internship Summer Program 2018</a></li>
+											<li><a target="_self" href="https://fossasia.org/apply-students">University Student Programs/Internships</a></li>
+											<li><a target="_self" href="https://fossasia.org/apply-pupils">Pre-University Student Programs</a></li>
+											<li><a target="_self" href="https://codeheat.org">Code Heat Contest</a></li>
+											<li><a target="_self" href="https://fossasia.org/adp">Advanced Developer Program</a></li>
+										</ul>
+									<li class="has-dropdown"><a href="https://labs.fossasia.org/#projects">Projects</a>
+               					     <ul class="nav-dropdown projects" style="min-height: 590px"> <!--whenever you add/remove an option, change the style="min-height:500px" by +- 25px-->
 											<li><a target="_self" href="https://github.com/fossasia">Contribute on Github</a></li>
-											<li><a target="_self" href="http://labs.fossasia.org/#projects">Projects</a></li>
-											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">Project Ideas</a></li>
-											<li><a target="_self" href="http://labs.fossasia.org/stipends.html">Project Stipends</a></li>
-											<li><a target="_self" href="http://codeheat.org">Code Heat Contest</a></li>
-											<li><a target="_self" href="http://gci16.fossasia.org">Code-In 2016</a></li>
-											<li><a target="_self" href="http://gci15.fossasia.org">Code-In 2015</a></li>
-											<li><a target="_self" href="http://gci14.fossasia.org">Code-In 2014</a></li>
-										</ul>									
+											<li><a target="_self" href="https://labs.fossasia.org/ideas.html">Project Ideas</a></li>
+											<li><a target="_self" href="https://labs.fossasia.org" target="_self">FOSSASIA Labs</a></li>
+											<li><a target="_self" href="https://susi.ai">SUSI.AI</a></li>
+											<li><a target="_self" href="https://Eventyay.com">eventyay</a></li>
+											<li><a target="_self" href="https://loklak.org">loklak Social Search</a></li>
+											<li><a target="_self" href="https://susper.com">Susper Seach Engine</a></li>
+											<li><a target="_self" href="https://yaydoc.org">Yaydoc Document Generator</a></li>
+											<li><a target="_self" href="https://phimp.me">Phimp.me Image App</a></li>
+											<li><a target="_self" href="https://meilix.org">Meilix Linux</a></li>
+											<li><a target="_self" href="https://pslab.fossasia.org/">Pocket Science Lab</a></li>
+											<li><a target="_self" href="https://query-server.herokuapp.com/">Query Server</a></li>
+											<li><a target="_self" href="https://knitting.fossasia.org/">Knitting Lab</a></li>
+											<li><a target="_self" href="https://badgeyay.com/">Badgeyay</a></li>
+											<li><a target="_self" href="https://gci17.fossasia.org">Code-In 2017</a></li>
+											<li><a target="_self" href="https://gci16.fossasia.org">Code-In 2016</a></li>
+											<li><a target="_self" href="https://gci15.fossasia.org">Code-In 2015</a></li>
+											<li><a target="_self" href="https://gci14.fossasia.org">Code-In 2014</a></li>
+										</ul>
 									<li><a target="_self" class="inner-link" href="#subscribe">Subscribe</a></li>
 									<li><a target="_self" href="http://blog.fossasia.org">Blog</a></li>
-									<li><a target="_self" href="http://2017.fossasia.org">FOSSASIA'17</a></li>
 									<li class="has-dropdown"><a href="http://events.fossasia.org">Events</a>
-										<ul class="nav-dropdown" style="min-height: 425px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
-											<li><a target="_self" href="http://events.fossasia.org/#sponsorship">Sponsorship</a></li>
-											<li><a target="_self" href="http://eventyay.com">FOSSASIA Event Management</a></li>				
-											<li><a href="http://sciencehack.asia" target="_self">Science Hack Asia</a></li>
-											<li><a href="http://sciencehack.in" target="_self">Science Hack India</a></li>
-											<li><a target="_self" href="http://2017.fossasia.org">FOSSASIA 2017</a></li>
-											<li><a target="_self" href="http://2016.fossasia.org">FOSSASIA 2016</a></li>
-											<li><a target="_self" href="http://2015.fossasia.org">FOSSASIA 2015</a></li>
-											<li><a target="_self" href="http://2014.fossasia.org">FOSSASIA 2014</a></li>
-											<li><a target="_self" href="http://2012.fossasia.org">FOSSASIA 2012</a></li>
-											<li><a target="_self" href="http://2011.fossasia.org">FOSSASIA 2011</a></li>
-											<li><a target="_self" href="http://2010.fossasia.org">FOSSASIA 2010</a></li>
-											<li><a target="_self" href="http://2009.fossasia.org">GNOME.Asia 2009</a></li>
-											<li><a target="_self" href="http://coc.fossasia.org">Code of Conduct</a></li>										
+										<ul class="nav-dropdown events" style="min-height: 565px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
+											<li><a target="_self" href="https://events.fossasia.org/#sponsorship">Sponsorship</a></li>
+											<li><a target="_self" href="https://calendar.fossasia.org">Event Calendar</a></li>
+											<li><a target="_self" href="https://eventyay.com">FOSSASIA Event Management</a></li>
+											<li><a target="_self" href="https://sciencehack.asia">Science Hack Asia</a></li>
+											<li><a target="_self" href="https://sciencehack.in">Science Hack India</a></li>
+											<li><a target="_self" href="https://2018.fossasia.org">FOSSASIA Summit 2018</a></li>
+											<li><a target="_self" href="https://opentechsummit.cn">OpenTechSummit China</a></li>
+											<li><a target="_self" href="https://jugaadfest.com">Jugaadfest India</a></li>
+                     						<li><a target="_self" href="https://2018.fossasia.org">FOSSASIA Summit 2018</a></li>
+											<li><a target="_self" href="https://2017.fossasia.org">FOSSASIA Summit 2017</a></li>
+											<li><a target="_self" href="https://2016.fossasia.org">FOSSASIA Summit 2016</a></li>
+											<li><a target="_self" href="https://2015.fossasia.org">FOSSASIA Summit 2015</a></li>
+											<li><a target="_self" href="https://2014.fossasia.org">FOSSASIA Summit 2014</a></li>
+											<li><a target="_self" href="https://2012.fossasia.org">FOSSASIA Summit 2012</a></li>
+											<li><a target="_self" href="https://2011.fossasia.org">FOSSASIA Summit 2011</a></li>
+											<li><a target="_self" href="https://2010.fossasia.org">FOSSASIA Summit 2010</a></li>
+											<li><a target="_self" href="https://2009.fossasia.org">GNOME.Asia 2009</a></li>
+											<li><a target="_self" href="https://coc.fossasia.org">Code of Conduct</a></li>
 										</ul>
-									</li>
-									<li><a target="_self" href="http://fossasia.org/donate/">Donate</a></li>
-									<li><a href="http://blog.fossasia.org/contact/" target="_self">Contact</a></li>											
-									<li class="social-link"><a target="_self" href="http://twitter.org/fossasia"><i class="icon social_twitter"></i></a></li>
-									<li class="social-link"><a target="_self" href="http://facebook.com/fossasia"><i class="icon social_facebook"></i></a></li>
+									<li class="hidden-sm hidden-xs"><a target="_self" href="./donate/">Donate</a></li>
+									<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://twitter.com/fossasia"><i class="icon social_twitter"></i></a></li>
+									<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://facebook.com/fossasia"><i class="icon social_facebook"></i></a></li>
+      								<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://github.com/fossasia"><i class="fa fa-github fa-lg"></i></a></li>
 
 								</ul>
 								<div class="sidebar-menu-toggle"><i class="icon icon_menu"></i></div>
