--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-2">
-								<a  target="_self" class="inner-link" href="#top"><img alt="FOSSASIA" class="logo logo-light" src="img/fossasia-long.png">
+								<a  target="_self" class="inner-link" href="https://fossasia.org"><img alt="FOSSASIA" class="logo logo-light" src="img/fossasia-long.png">
 								<img alt="FOSSASIA" class="logo logo-dark" src="img/fossasia-dark.png"></a>
 							</div>
 
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-										<li class="has-dropdown"><a href="./about">About</a>
+										<li class="has-dropdown"><a href="https://fossasia.org/about">About</a>
 										<ul class="nav-dropdown" style="min-height: 100px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
 											<li><a target="_self" href="https://fossasia.org/about#background">Background & Mission</a></li>
 											<li><a target="_self" href="https://fossasia.org/licenses">Licenses</a></li>
@@ -103,9 +103,9 @@
 											<li><a target="_self" href="https://gci15.fossasia.org">Code-In 2015</a></li>
 											<li><a target="_self" href="https://gci14.fossasia.org">Code-In 2014</a></li>
 										</ul>
-									<li><a target="_self" class="inner-link" href="#subscribe">Subscribe</a></li>
-									<li><a target="_self" href="http://blog.fossasia.org">Blog</a></li>
-									<li class="has-dropdown"><a href="http://events.fossasia.org">Events</a>
+									<li><a target="_self" class="inner-link" href="https://fossasia.org/#subscribe">Subscribe</a></li>
+									<li><a target="_self" href="https://blog.fossasia.org">Blog</a></li>
+									<li class="has-dropdown"><a href="https://events.fossasia.org">Events</a>
 										<ul class="nav-dropdown events" style="min-height: 565px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
 											<li><a target="_self" href="https://events.fossasia.org/#sponsorship">Sponsorship</a></li>
 											<li><a target="_self" href="https://calendar.fossasia.org">Event Calendar</a></li>
@@ -126,7 +126,7 @@
 											<li><a target="_self" href="https://2009.fossasia.org">GNOME.Asia 2009</a></li>
 											<li><a target="_self" href="https://coc.fossasia.org">Code of Conduct</a></li>
 										</ul>
-									<li class="hidden-sm hidden-xs"><a target="_self" href="./donate/">Donate</a></li>
+									<li class="hidden-sm hidden-xs"><a target="_self" href="https://fossasia.org/donate/">Donate</a></li>
 									<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://twitter.com/fossasia"><i class="icon social_twitter"></i></a></li>
 									<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://facebook.com/fossasia"><i class="icon social_facebook"></i></a></li>
       								<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://github.com/fossasia"><i class="fa fa-github fa-lg"></i></a></li>
@@ -149,23 +149,21 @@
 							<div class="widget">
 								<ul class="menu">
 									<li><a class="inner-link" href="#top">Home</a></li>
-									<li><a href="http://fossasia.org/about" target="_self">About</a></li>
-									<li><a href="http://eventyay.com" target="_self">eventyay Event Management</a></li>									
-									<li><a class="inner-link" href="#labs" target="_self">Labs &amp; Code</a></li>
-									<li><a href="http://github.com/fossasia" target="_self">Contribute</a></li>
+									<li><a href="https://fossasia.org/about" target="_self">About</a></li>
+									<li><a href="https://eventyay.com" target="_self">eventyay Event Management</a></li>	
+									<li><a href="https://github.com/fossasia" target="_self">Contribute</a></li>
 									<!-- <li><a class="inner-link" href="#support" target="_self">Support</a></li><li><a class="inner-link" href="#subscribe" target="_self">Subscribe</a></li> -->
-									<li><a href="http://2017.fossasia.org" target="_self">FOSSASIA'17</a></li>
-									<li><a href="http://blog.fossasia.org" target="_self">Blog</a></li>
-									<li><a href="http://fossasia.org/donate/" target="self">Donate</a></li>
+									<li><a href="https://blog.fossasia.org" target="_self">Blog</a></li>
+									<li><a href="https://fossasia.org/donate/" target="self">Donate</a></li>
 									<li><a href="https://groups.google.com/group/fossasia" target="_self">Mailing List</a></li>
-									<li><a href="http://blog.fossasia.org/contact/" target="_self">Contact</a></li>
+									<li><a href="https://blog.fossasia.org/contact/" target="_self">Contact</a></li>
 								</ul>
 							</div>
 
 							<div class="widget">
 								<ul class="social-profiles">
-									<li><a href="http://twitter.com/fossasia" target="_self"><i class="icon social_twitter"></i></a></li>
-									<li><a href="http://facebook.com/fossasia" target="_self"><i class="icon social_facebook"></i></a></li>
+									<li><a href="https://twitter.com/fossasia" target="_self"><i class="icon social_twitter"></i></a></li>
+									<li><a href="https://facebook.com/fossasia" target="_self"><i class="icon social_facebook"></i></a></li>
                   					<li><a href="https://www.youtube.com/channel/UCQprMsG-raCIMlBudm20iLQ" target="_self"><i class="icon social_youtube icon-large"></i></a></li>
                   					<li><a href="https://www.flickr.com/photos/fossasia/" target="_self"><i class="icon social_flickr"></i></a></li>
                   					<li><a href="https://www.instagram.com/explore/tags/fossasia/" target="_self"><i class="icon social_instagram"></i></a></li>
